<resources>
    <string name="app_name">SendMap</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="button1">Camera</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">prompt_password</string>
    <string name="name_problem">Problem Name:</string>
    <string name="grade">Grade:</string>
    <string name="coment">Comentario:</string>
    <string name="recent">Recent news in your zone</string>
    <string name="ranking_position">Ranking position:</string>
    <string name="number_of_boulders">Number of ascent boulders:</string>
    <string name="points_text">Points:</string>
    <string name="thumbnail">thumbnail</string>
    <string name="local">Local</string>
    <string name="regional">Regional</string>
    <string name="global">Global</string>


    <string-array name="grades">
        <item>6a</item>
        <item>6a+</item>
        <item>6b</item>
        <item>6b+</item>
        <item>6c</item>
        <item>6c+</item>
        <item>7a</item>
    </string-array>
</resources>
