<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context="com.example.manuel.demos.RankingActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/black"

        app:tabSelectedTextColor="@color/black">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"/>

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regional"/>

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global"></android.support.design.widget.TabItem>


    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab_ranking"
        android:padding="20dp">


            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background"></ListView>

    </android.support.v4.view.ViewPager>

</RelativeLayout>
