<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Design.Light"
    android:background="@color/light_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manuel.demos.ProblemData">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        app:srcCompat="@drawable/no_image_found" />

    <TextView
        android:id="@+id/problem_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginStart="28dp"
        android:layout_marginTop="77dp"
        android:text="@string/name_problem"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/problem_name"
        android:layout_below="@+id/problem_name"
        android:layout_marginTop="15dp"
        android:text="@string/grade"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/coments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/grade"
        android:layout_below="@+id/grade"
        android:layout_marginTop="23dp"
        android:text="@string/coment"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/boudler_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/grade"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/problem_name"
        android:background="@color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/boudler_name"

        android:layout_alignStart="@+id/boudler_name"
        android:layout_alignTop="@+id/grade"
        android:background="@color/black" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/spinner2"
        android:layout_alignTop="@+id/coments"
        android:background="@color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:onClick="upload"
        android:text="upload" />


</RelativeLayout>
